[package]
name = "voyeur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde_json = "1.0.140"
rust_socketio = "0.6.0"
rust_engineio = "0.6.0"
url = "2.5.4"
reqwest = { version = "0.12.15", features = ["cookies"] }

