[package]
name = "voyeur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde_json = "1.0.140"
rust_socketio = { version = "0.6.0", features = ["async"] }
url = "2.5.4"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
serde_path_to_error = "0.1.17"
poise = "0.6.1"
pickledb = "0.5.1"
caith = "4.2.4"
deno_core = "0.348.0"
thiserror = "2.0.12"
